--- a/slides/code/SN1.tex
+++ b/slides/code/SN1.tex
@@ -23,6 +23,39 @@
 \AgdaModule{Agda.Builtin.Equality}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{refl}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{infixr}\AgdaSpace{}%
+\AgdaNumber{2}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇝\AgdaUnderscore{}}}\<%
+\\
+\>[0]\AgdaKeyword{infixr}\AgdaSpace{}%
+\AgdaNumber{2}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇄\AgdaUnderscore{}}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇄\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitive{Set}\<%
+\\
+\>[0]\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇄}}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaHole{\{!\ \ \ !\}}\<%
 \end{code}
 
 %<*sn-def>
@@ -57,6 +90,68 @@
 \AgdaBound{t}\<%
 \end{code}
 %</sn-def>
+
+%<*sn-iso-def>
+\begin{code}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇝\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitive{Set}\<%
+\\
+\>[0]\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇝}}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊎}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇄}}\AgdaSpace{}%
+\AgdaBound{t'}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{data}\AgdaSpace{}%
+\AgdaDatatype{SN₂}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitive{Set}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaInductiveConstructor{sn}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{t'}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇝}}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{SN}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{SN₂}\AgdaSpace{}%
+\AgdaBound{t}\<%
+\end{code}
+%</sn-iso-def>
 
 %<*example>
 \begin{code}%
@@ -98,11 +193,11 @@
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaSymbol{λ}%
-\>[66I]\AgdaSymbol{\{}\AgdaSpace{}%
+\>[134I]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₁}\AgdaSpace{}%
 \AgdaSymbol{())}\<%
 \\
-\>[.][@{}l@{}]\<[66I]%
+\>[.][@{}l@{}]\<[134I]%
 \>[13]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₂}\AgdaSpace{}%
 \AgdaSymbol{())}\AgdaSpace{}%
@@ -135,12 +230,12 @@
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaSymbol{λ}%
-\>[94I]\AgdaSymbol{\{}\AgdaSpace{}%
+\>[162I]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-π}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₁}\AgdaSpace{}%
 \AgdaSymbol{()))}\<%
 \\
-\>[.][@{}l@{}]\<[94I]%
+\>[.][@{}l@{}]\<[162I]%
 \>[11]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-π}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₂}\AgdaSpace{}%
@@ -202,7 +297,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}%
-\>[145I]\AgdaFunction{aux}\AgdaSpace{}%
+\>[213I]\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{a}\AgdaSpace{}%
@@ -226,7 +321,7 @@
 \AgdaDatatype{SN}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \\
-\>[.][@{}l@{}]\<[145I]%
+\>[.][@{}l@{}]\<[213I]%
 \>[8]\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
@@ -290,7 +385,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}%
-\>[215I]\AgdaFunction{aux}\AgdaSpace{}%
+\>[283I]\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
@@ -307,7 +402,7 @@
 \AgdaDatatype{SN}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \\
-\>[.][@{}l@{}]\<[215I]%
+\>[.][@{}l@{}]\<[283I]%
 \>[8]\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
@@ -325,10 +420,6 @@
 \>[0]\AgdaFunction{lemma-·}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -368,7 +459,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{where}%
-\>[279I]\AgdaFunction{aux}\AgdaSpace{}%
+\>[347I]\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{a}\AgdaSpace{}%
@@ -390,17 +481,17 @@
 \AgdaDatatype{SN}\AgdaSpace{}%
 \AgdaBound{t'}\<%
 \\
-\>[.][@{}l@{}]\<[279I]%
+\>[.][@{}l@{}]\<[347I]%
 \>[8]\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{SNb}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}%
-\>[35]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{step}\AgdaSymbol{)}%
+\>[38]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{lemma-·}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{step}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{SNb}\<%
 \\
 %
@@ -409,12 +500,12 @@
 \AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaInductiveConstructor{sn}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{f}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaInductiveConstructor{ξ-·₂}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{s}}\AgdaCatchallClause{\AgdaSymbol{)}}%
-\>[35]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaCatchallClause{\AgdaBound{step}}\AgdaCatchallClause{\AgdaSymbol{)}}%
+\>[38]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{lemma-·}\AgdaSpace{}%
 \AgdaBound{SNa}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\<%
+\AgdaBound{step}\AgdaSymbol{)}\<%
 \\
 %
 \>[8]\AgdaCatchallClause{\AgdaFunction{aux}}\AgdaSpace{}%
@@ -425,7 +516,7 @@
 \AgdaCatchallClause{\AgdaBound{SNa}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{SNb}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaInductiveConstructor{β-ƛ}}%
-\>[35]\AgdaSymbol{=}\AgdaSpace{}%
+\>[38]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaHole{\{!\ \ !\}}\AgdaSpace{}%
 \AgdaComment{--\ SN\ (t\ [\ b\ ])}\<%
 \end{code}
