--- a/slides/code/SN3.tex
+++ b/slides/code/SN3.tex
@@ -758,11 +758,11 @@
 \AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{SNu}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{cong-SN*}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{subst-split}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{\})}\AgdaSpace{}%
+%\AgdaFunction{cong-SN*}\AgdaSpace{}%
+%\AgdaSymbol{(}\AgdaFunction{subst-split}\AgdaSpace{}%
+%\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
+%\AgdaSymbol{=}\AgdaSpace{}%
+%\AgdaBound{t}\AgdaSymbol{\})}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{adequacy}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{u}\AgdaSpace{}%
