--- a/slides/code/SN5.tex
+++ b/slides/code/SN5.tex
@@ -1168,13 +1168,13 @@
 \AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{SNu}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{transport}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{subst-split}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSymbol{\})}\AgdaSpace{}%
+%\AgdaFunction{transport}\AgdaSpace{}%
+%\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
+%\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\AgdaSpace{}%
+%\AgdaSymbol{(}\AgdaFunction{subst-split}\AgdaSpace{}%
+%\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
+%\AgdaSymbol{=}\AgdaSpace{}%
+%\AgdaBound{t}\AgdaSymbol{\})}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{adequacy}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⊨}}\AgdaSpace{}%
