--- a/slides/code/context.tex
+++ b/slides/code/context.tex
@@ -20,8 +20,11 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Context}\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</ctx>
+
+%<*index>
+\begin{code}
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}∋\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -78,7 +81,7 @@
 \AgdaOperator{\AgdaDatatype{∋}}\AgdaSpace{}%
 \AgdaBound{B}\<%
 \end{code}
-%</ctx>
+%</index>
 
 %<*example>
 \begin{code}
