--- a/slides/agda.sty
+++ b/slides/agda.sty
@@ -719,7 +719,7 @@
             \AgdaFormatCodeNumber{\theAgdaCodeNumber}}}}{}%
     %
     % Indent the entire code block.
-    \advance\leftskip\mathindent%
+    %\advance\leftskip\mathindent%
     %
     % The code's style can be customised.
     \AgdaCodeStyle%
